--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,12 +1,20 @@
-@import '_variable.scss';
-*{
-    padding: 0;
-    border: none;
-    margin: 0;
-    font-size: $defaultFontSize;
-    background-color: none;
+@import "_variable.scss";
+* {
+  padding: 0;
+  border: none;
+  margin: 0;
+  font-size: $defaultFontSize;
+  background-color: none;
 }
-@import '_header.scss';
-@import '_interactive-section.scss';
-@import '_search-section.scss';
-@import '_suggest-section.scss';
+@import "_header.scss";
+@import "_interactive-section.scss";
+@import "_search-section.scss";
+@import "_suggest-section.scss";
+.hola1 {
+  width: 500px;
+  height: 500px;
+  .hola2 {
+    width: 100%;
+    height: 100%;
+  }
+}
