--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,12 +54,6 @@ header nav ul li a {
   text-align: center;
 }
 
-header nav ul li a img {
-  width: 33%;
-  margin-left: 30%;
-  margin-top: 49%;
-}
-
 header nav ul .create-gifos,
 header nav ul .choose-theme,
 header nav ul .down-arrow {
@@ -112,6 +106,12 @@ header nav ul .choose-theme {
 header nav ul .down-arrow {
   width: 2.5%;
   height: 36px;
+}
+
+header nav ul .down-arrow .dropdown-image {
+  width: 33%;
+  margin-left: 30%;
+  margin-top: 49%;
 }
 
 header nav ul .text-button {
@@ -301,11 +301,11 @@ header nav .theme-options .theme-night .night-text {
   line-height: 18px;
 }
 
-section {
+.suggest {
   margin-top: 64px;
 }
 
-section .suggest-box {
+.suggest .suggest-box {
   background: #fffafe;
   border: 1px solid #e6bbe2;
   -webkit-box-shadow: inset -2px -2px 0 0 #e6dce4, inset 2px 2px 0 0 #80687d;
@@ -321,7 +321,7 @@ section .suggest-box {
           align-items: center;
 }
 
-section .suggest-box h2 {
+.suggest .suggest-box h2 {
   margin-left: 1%;
   font-family: "Chakra Petch", sans-serif;
   font-size: 14px;
@@ -329,13 +329,116 @@ section .suggest-box h2 {
   letter-spacing: 0;
 }
 
-.hola1 {
-  width: 500px;
-  height: 500px;
+.suggest .suggest-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 6.9%;
+  margin-top: 16px;
+  width: 83.3%;
 }
 
-.hola1 .hola2 {
-  width: 100%;
-  height: 100%;
+.suggest .suggest-container .suggest-container-gifbox {
+  background: #E6E6E6;
+  -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+          box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  width: 23.4%;
+  height: 313px;
+}
+
+.suggest .suggest-container .suggest-container-gifbox p {
+  background-image: -webkit-gradient(linear, right top, left top, from(#F7C9F3), to(#4180F6));
+  background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+}
+
+.suggest .suggest-container .suggest-container-gifbox p .close-button-1 {
+  position: relative;
+  left: 140px;
+  top: 1px;
+}
+
+.suggest .suggest-container .suggest-container-gifbox p .close-button-2 {
+  position: relative;
+  left: 189px;
+  top: 1px;
+}
+
+.suggest .suggest-container .suggest-container-gifbox p .close-button-3 {
+  position: relative;
+  left: 157px;
+  top: 1px;
+}
+
+.suggest .suggest-container .suggest-container-gifbox p .close-button-4 {
+  position: relative;
+  left: 138px;
+  top: 1px;
+}
+
+.suggest .suggest-container .suggest-container-gifbox .suggest-gifbox-img a {
+  background: #4180F6;
+  border: 1px solid #4C2F99;
+  -webkit-box-shadow: inset -2px -2px 0 0 #284F99, inset 0.5px 0.5px 0 0 #FFFFFF;
+          box-shadow: inset -2px -2px 0 0 #284F99, inset 0.5px 0.5px 0 0 #FFFFFF;
+  position: relative;
+  top: -20px;
+  left: 5px;
+}
+
+.trend {
+  margin-top: 64px;
+}
+
+.trend .trend-box {
+  background: #fffafe;
+  border: 1px solid #e6bbe2;
+  -webkit-box-shadow: inset -2px -2px 0 0 #e6dce4, inset 2px 2px 0 0 #80687d;
+          box-shadow: inset -2px -2px 0 0 #e6dce4, inset 2px 2px 0 0 #80687d;
+  margin-left: 6.9%;
+  width: 83.3%;
+  height: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.trend .trend-box h2 {
+  margin-left: 1%;
+  font-family: "Chakra Petch", sans-serif;
+  font-size: 14px;
+  color: #110038;
+  letter-spacing: 0;
+}
+
+.trend .trend-gifs {
+  margin-left: 6.9%;
+  margin-top: 16px;
+  margin-right: 9.8%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+body {
+  background: #FFF4FD;
 }
 /*# sourceMappingURL=styles.css.map */
