Almost there This commit hast all the code needed to get the project to the stage which is before the local storage. It is able to fetch the gifs, look for them and create the suggestions, it is also able to take you to my gifs section

--- a/styles/_search-section.scss
+++ b/styles/_search-section.scss
@@ -47,7 +47,7 @@
         color: #b4b4b4;
       }
       p {
-        margin-top: 10%;
+        margin-top: 8%;
         margin-left: 5%;
         font-family: $fontFamily1;
         font-size: 16px;
@@ -61,7 +61,7 @@
     background: #E6E6E6;
     box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
     height: 160px;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-around;
   }
