--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -12,6 +12,7 @@ header {
     .gifos-image {
       margin-left: 6.3%;
       margin-top: 35px;
+      z-index: 1;
     }
     ul {
       list-style: none;
@@ -76,6 +77,9 @@ header {
         height: 18px;
         :hover {
           border: 1.5px dotted #110038;
+        }
+        a {
+          cursor: pointer;
         }
       }
     }
