New addition since a long time ago I preferred to work in only one commit, bad practice I know, however, it worked for me. It doesn't mean I will keep doing this. I should create branches and commit on save changes. This version is able to control the camera, record the gif and uploaded to the giphy DB

--- a/styles/dark/styles.scss
+++ b/styles/dark/styles.scss
@@ -9,6 +9,7 @@
 @import "_header.scss";
 @import "_interactive-section.scss";
 @import "_search-section.scss";
+@import "_capturing-video-section.scss";
 @import "_suggest-section.scss";
 @import "_trend-section.scss";
 body {
