--- a/styles/light/styles.scss
+++ b/styles/light/styles.scss
@@ -9,6 +9,7 @@
 @import "_header.scss";
 @import "_interactive-section.scss";
 @import "_search-section.scss";
+@import "_capturing-video-section.scss";
 @import "_suggest-section.scss";
 @import "_trend-section.scss";
 body {
