--- a/styles/light/styles.css
+++ b/styles/light/styles.css
@@ -1384,9 +1384,7 @@ header nav .theme-options .theme-night .night-text {
 }
 
 .trend .trend-gifs {
-  margin-left: 6.9%;
-  margin-top: 16px;
-  margin-right: 9.8%;
+  margin: 16px 9.8% 15px 6.9%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1396,9 +1394,9 @@ header nav .theme-options .theme-night .night-text {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 body {
