--- a/styles/dark/styles.css
+++ b/styles/dark/styles.css
@@ -292,14 +292,14 @@ header nav .theme-options .theme-night .night-text {
 }
 
 .search-box .form-box button img {
-  margin-right: 5%;
-  margin-left: 5%;
+  margin: 5% 0 0 -2%;
   color: #b4b4b4;
+  width: 50%;
+  height: 70%;
 }
 
 .search-box .form-box button p {
   margin-top: 8%;
-  margin-left: 5%;
   font-family: "Chakra Petch", sans-serif;
   font-size: 16px;
   color: #8F8F8F;
