There was some changes to the html structure in order to meet the requirments of validators

--- a/styles/dark/_search-section.scss
+++ b/styles/dark/_search-section.scss
@@ -30,7 +30,7 @@
       height: 48px;
       z-index: 1;
     }
-    button {
+    .search-button {
       z-index: 1;
       display: flex;
       position: absolute;
