--- a/styles/dark/_capturing-video-section.scss
+++ b/styles/dark/_capturing-video-section.scss
@@ -68,6 +68,9 @@
             width: 144px;
             height: 36px;
             margin-right: 16px;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
             p {
               font-family: $fontFamily1;
               font-size: 16px;
@@ -83,6 +86,9 @@
             box-shadow: inset -1px -1px 0 0 #997d97, inset 1px 1px 0 0 #ffffff;
             width: 144px;
             height: 36px;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
             p {
               font-family: $fontFamily1;
               font-size: 16px;
@@ -392,7 +398,7 @@
     .uploading-video-div {
         width: 98%;
         height: 480px;
-        margin: 10px 0 0 1%;
+        margin: 10px 0 20px 1%;
         background: #FFFFFF;
         border: 1px solid #979797;
         box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
