--- a/styles/light/_capturing-video-section.scss
+++ b/styles/light/_capturing-video-section.scss
@@ -68,6 +68,9 @@
             width: 144px;
             height: 36px;
             margin-right: 16px;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
             p {
               font-family: $fontFamily1;
               font-size: 16px;
@@ -83,6 +86,9 @@
             box-shadow: inset -1px -1px 0 0 #997d97, inset 1px 1px 0 0 #ffffff;
             width: 144px;
             height: 36px;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
             p {
               font-family: $fontFamily1;
               font-size: 16px;
@@ -97,82 +103,6 @@
     }
   }
 }
-// .preview {
-//     padding-top: 80px;
-//     display: flex;
-//     justify-content: space-around;
-//     .preview-container {
-//         background: #E6E6E6;
-//         box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
-//         width: 59.7%;
-//         // height: 518px;
-//       .preview-container-header {
-//         height:24px;
-//         width: 100%;
-//         background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
-//         box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
-//         display: flex;
-//         flex-direction: row;
-//         align-items: center;
-//         p {
-//             margin: 0 72% 0 0.5%;
-//             font-family: ChakraPetch-Bold;
-//             font-size: 14px;
-//             color: #FFFFFF;
-//             letter-spacing: 0;
-//         }
-//       }
-//       .preview-camera {
-//           width: 98%;
-//           height: 480px;
-//           margin-left:1%;
-//           video {
-//               margin-top: 10px;
-//               width: 100%;
-//               height: 480px;
-//           }
-//       }
-//       .capture-container{
-//           width: 100%;
-//           margin: 30px 50px 30px 0;
-//           ul {
-//             list-style: none;
-//             display: flex;
-//             flex-direction: row;
-//             justify-content: flex-end;
-//             margin-right: 50px;
-//             .capture-png {
-//               background: #F7C9F3;
-//               border: 1px solid #110038;
-//               box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-//               width: 36px;
-//               height: 36px;
-//               display: flex;
-//               justify-content: space-around;
-//             }
-//             .capture-text {
-//               background: #F7C9F3;
-//               border: 1px solid #110038;
-//               box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-//               width: 144px;
-//               height: 36px;
-//               display: flex;
-//               justify-content: space-around;
-//               align-items: center;
-//               p {
-//                 font-family: $fontFamily1;
-//                 font-size: 16px;
-//                 color: #110038;
-//                 letter-spacing: 0;
-//                 text-align: center;
-//                 line-height: 18px;
-//               }
-//             }
-//         }
-//       }
-//     }
-//   }
-
 
 .preview {
   padding-top: 80px;
@@ -469,7 +399,7 @@
     .uploading-video-div {
         width: 98%;
         height: 480px;
-        margin: 10px 0 0 1%;
+        margin: 10px 0 20px 1%;
         background: #FFFFFF;
         border: 1px solid #979797;
         box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
