--- a/styles/light/_search-section.scss
+++ b/styles/light/_search-section.scss
@@ -30,7 +30,7 @@
       height: 48px;
       z-index: 1;
     }
-    button {
+    .search-button {
       z-index: 1;
       display: flex;
       position: absolute;
