--- a/styles/light/styles.scss
+++ b/styles/light/styles.scss
@@ -12,6 +12,7 @@
 @import "_capturing-video-section.scss";
 @import "_suggest-section.scss";
 @import "_trend-section.scss";
+@import '_history-section.scss';
 body {
   background: #FFF4FD;
 }
